[package]
name = "wayvr"
version = "0.1.0"
edition = "2021"
authors = ["oo8.dev <aleksander@oo8.dev>"]

[lib]
name = "wayvr"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.89"
glow = "0.14.1"
khronos-egl = { version = "6.0.0", features = ["static"] }
log = "0.4.22"
nalgebra-glm = "0.19.0"
pretty_env_logger = "0.5.0"
smithay = { git = "https://github.com/Smithay/smithay.git", default-features = false, features = [
	"renderer_gl",
	"backend_egl",
	"xwayland",
	"wayland_frontend",
] }
wayland-client = "0.31.6"
wayland-egl = "0.32.4"
